traefik/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  containers:
  - name: echoserver
    image: gcr.io/hello-minikube-zero-install/hello-node
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: my-app
  type: NodePort
