traefik/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: whoareyou.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: my-app
          servicePort: http
